@@ -17,7 +17,8 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -50,7 +51,10 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 Optional<User> userOptional = userRepository.findByUsername(username);
                 if (userOptional.isPresent() && jwtService.isTokenValid(claims, username)) {
                     User user = userOptional.get();
-                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(user, null, Collections.emptyList());
+                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                                    user,
+                                    null,
+                                    List.of());
                     SecurityContextHolder.getContext().setAuthentication(authentication);
                 }
             }
